--- a/src/product/cruise/share/Share.css
+++ b/src/product/cruise/share/Share.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: right;
+  text-align: left;
 }
 
 .App-logo {
@@ -15,10 +15,10 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 2vh;
   display: flex;
   flex-direction: column;
-  align-items: right;
+  align-items: left;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -26,6 +26,16 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.title{
+  font-size: calc(13px + 2vmin);
+}
+
+.content{
+  font-size: calc(10px + 2vmin);
+  padding-left: 4vw;
+  padding-right: 4vw;
 }
 
 @keyframes App-logo-spin {
