--- a/src/product/cruise/share/Share.css
+++ b/src/product/cruise/share/Share.css
@@ -37,9 +37,25 @@
   left: 0px; 
   bottom: 0px; 
   width: 100%; 
+  display: flex;
   height: 50px; 
-  background-color: rgb(235, 147, 147); 
+  background-color: rgb(238, 224, 224); 
   z-index: 9999;
+  justify-content: space-between;
+}
+
+.open{
+  background-color: rgb(233, 42, 42); 
+  margin-top: 1vh;
+  margin-bottom: 2vh;
+  border-radius: 1vw;
+  width: 20vw;
+  text-align: center;
+}
+
+.slogan{
+  margin-top: 1vh;
+  margin-bottom: 2vh;
 }
 
 .content{
