--- a/src/product/cruise/share/Share.css
+++ b/src/product/cruise/share/Share.css
@@ -62,6 +62,7 @@
   font-size: calc(10px + 2vmin);
   padding-left: 4vw;
   padding-right: 4vw;
+  overflow: hidden;
 }
 
 @keyframes App-logo-spin {
