[feature] 添加禁用双指缩放禁用

--- a/src/product/cruise/share/Share.css
+++ b/src/product/cruise/share/Share.css
@@ -62,7 +62,14 @@
   font-size: calc(10px + 2vmin);
   padding-left: 4vw;
   padding-right: 4vw;
-  overflow: hidden;
+  
+}
+
+.html{
+  overflow-wrap: break-word;
+  word-break: break-all;
+  hyphens:auto;
+  line-break: anywhere;
 }
 
 @keyframes App-logo-spin {
