--- a/src/product/cruise/share/Share.css
+++ b/src/product/cruise/share/Share.css
@@ -30,10 +30,7 @@
 
 
 
-.open{
-  background-color: rgb(233, 42, 42); 
-  text-align: center;
-}
+
 
 
 .content{
@@ -69,13 +66,21 @@
   background-color: rgb(238, 224, 224); 
   z-index: 9999;
   justify-content: space-between;
+  justify-content: center;
+  align-items: center;
 }
 
 .slogan{
- font-size: 0.7rem;
+ font-size: 0.6rem;
  
 }
 
+.open{
+  background-color: rgb(233, 42, 42); 
+  text-align: center;
+  font-size: 0.7rem;
+  border-radius: 0.1rem;
+}
 
 @keyframes App-logo-spin {
   from {
