--- a/src/product/cruise/share/Share.css
+++ b/src/product/cruise/share/Share.css
@@ -1,5 +1,7 @@
 .App {
   text-align: left;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .App-logo {
@@ -26,26 +28,19 @@
 }
 
 .title{
+  font-size: 0.5rem;
+  word-break: break-all;
 }
 
-
-
-
-
-
 .content{
-  padding-left: 1rem;
-  padding-right: 1rem;
+  font-size: 0.38rem;
 }
 
 .html{
   overflow-wrap: break-word;
   word-break: break-all;
-  hyphens:auto;
-  line-break: anywhere;
   word-wrap:break-word;
   overflow: hidden;
-  white-space : normal
 }
 
 .content pre{
@@ -59,9 +54,9 @@
 .fixed-buttom-bar{ 
   position: fixed; 
   left: 0px; 
-  bottom: 0px; 
+  bottom: calc(env(safe-area-inset-bottom));; 
   width: 100%; 
-  height: 2rem;
+  height: 1.5rem;
   display: flex;
   background-color: rgb(238, 224, 224); 
   z-index: 9999;
@@ -70,16 +65,29 @@
   align-items: center;
 }
 
+.position-element{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: constant(safe-area-inset-bottom);
+  height: env(safe-area-inset-bottom);
+  background-color: #fff;
+}
+
 .slogan{
- font-size: 0.6rem;
- 
+ font-size: 0.5rem;
 }
 
 .open{
   background-color: rgb(233, 42, 42); 
   text-align: center;
-  font-size: 0.7rem;
-  border-radius: 0.1rem;
+  font-size: 0.6rem;
+  border-radius: 0.5rem;
+  width: 2rem;
+  height: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes App-logo-spin {
