--- a/src/product/cruise/share/Share.css
+++ b/src/product/cruise/share/Share.css
@@ -15,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: left;
@@ -58,20 +58,13 @@
   width: 100%; 
   height: 1.5rem;
   display: flex;
-  background-color: rgb(238, 224, 224); 
+  background-color:#ffffff; 
   z-index: 9999;
   justify-content: space-between;
   justify-content: center;
   align-items: center;
-}
-
-.position-element{
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: constant(safe-area-inset-bottom);
-  height: env(safe-area-inset-bottom);
-  background-color: #fff;
+  border-top: 0.01rem solid;
+  border-color: lightgray;
 }
 
 .slogan{
