--- a/src/product/cruise/share/Share.css
+++ b/src/product/cruise/share/Share.css
@@ -54,7 +54,7 @@
 .fixed-buttom-bar{ 
   position: fixed; 
   left: 0px; 
-  bottom: calc(env(safe-area-inset-bottom));; 
+  bottom: 0.2rem;
   width: 100%; 
   height: 1.5rem;
   display: flex;
@@ -67,14 +67,20 @@
   border-color: lightgray;
 }
 
+.fixed-buttom-bar img{
+  width: 0.6rem;
+  height: 0.6rem;
+  margin-right: 0.2rem;
+}
+
 .slogan{
- font-size: 0.5rem;
+ font-size: 0.45rem;
 }
 
 .open{
   background-color: rgb(233, 42, 42); 
   text-align: center;
-  font-size: 0.6rem;
+  font-size: 0.5rem;
   border-radius: 0.5rem;
   width: 2rem;
   height: 0.8rem;
