--- a/src/product/cruise/share/Share.css
+++ b/src/product/cruise/share/Share.css
@@ -34,7 +34,9 @@
 
 .content{
   font-size: 0.40rem;
-  /**页面底部有浮动栏目，留出一定的空隙**/
+  /**页面底部有浮动栏目，
+  页面留出一定的空隙
+  避免内容被浮动栏目遮挡**/
   margin-bottom: 2.5rem;
 }
 
@@ -71,6 +73,19 @@
   justify-content: center;
   align-items: center;
   border-top: 0.01rem solid;
+  border-color: lightgray;
+}
+
+.fixed-buttom-position-bar{
+  position: fixed; 
+  left: 0px; 
+  bottom: 0.0rem;
+  width: 100%; 
+  height: 0.2rem;
+  display: flex;
+  background-color:#ffffff; 
+  z-index: 9999;
+  border-top: 0rem solid;
   border-color: lightgray;
 }
 
