--- a/src/product/about/About.css
+++ b/src/product/about/About.css
@@ -2,6 +2,19 @@
   text-align: center;
 }
 
+.para {
+  
+}
+
+.content{
+  font-size: 0.05rem;
+}
+
+.contact{
+  height: 10px;
+  width: 10px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
