--- a/src/component/footer/Footer.css
+++ b/src/component/footer/Footer.css
@@ -6,13 +6,18 @@
   font-size: 0.05rem;
 }
 
-.foot{
-  font-size: 0.3rem;
+.App-footer-float{
+  opacity: 100%;
+  margin: 0 auto;
+  width: 100%;
 }
 
-.cruisediv{
-  height: 10px;
-  color: rgb(210, 14, 14);
+.App-footer{
+  font-size: 0.3rem;
+  position: fixed;
+  bottom: 0;
+  text-align: "center";
+  width: 100%;
 }
 
 .contact{
