--- a/src/product/pay/success/PaySuccess.css
+++ b/src/product/pay/success/PaySuccess.css
@@ -1,10 +1,5 @@
-.App {
-  text-align: center;
-}
-
 body {
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
 }
 
 h1 {
@@ -13,6 +8,7 @@ h1 {
   color: #333;
   margin-top: 0;
 }
+
 p {
   font-size: 24px;
   text-align: center;
@@ -20,7 +16,7 @@ p {
   margin: 20px 0;
 }
 
-.container {
+.pay-success-container {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
@@ -29,41 +25,5 @@ p {
   box-shadow: 0 0 10px #ccc;
 }
 
-.card-content {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
