refactor: replace the index page tab component

--- a/src/product/pay/Pay.css
+++ b/src/product/pay/Pay.css
@@ -18,7 +18,7 @@
   font-weight: bold;
 }
 
-.container {
+.pay-container {
   justify-content: center;
   align-items: center;
   text-align: center
