--- a/src/product/index/Index.css
+++ b/src/product/index/Index.css
@@ -1,20 +1,99 @@
-.App {
-  text-align: center;
+/* 页面布局 */
+.container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 18px;
 }
 
-.Tab {
-  height: 10vh;
-  color: blanchedalmond;
+/* 左侧区域 */
+.left {
+  width: 20%;
+  /*background-color: #f6f7f9;*/
+  padding: 16px;
 }
 
-.loadingdiv {
-  height: 10vh;
+/* 中间区域 */
+.center {
+  width: 60%;
+  background-color: #fff;
+  padding: 16px;
+  /*box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);*/
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* 右侧区域 */
+.right {
+  width: 20%;
+  /*background-color: #f6f7f9;*/
+  padding: 16px;
 }
+
+/* 选项卡容器 */
+.tab-container {
+  display: flex;
+  align-items: center;
+  background-color: #f6f7f9;
+  padding: 8px;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  overflow-x: auto;
+  white-space: nowrap;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex-grow: 1;
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
+/* 选项卡样式 */
+.tab {
+  display: inline-block;
+  padding: 10px 16px;
+  border-radius: 4px;
+  color: #999;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  margin-right: 12px;
+  font-size: 25px;
+}
+
+/* 当前选项卡样式 */
+.tab.active {
+  color: #246394;
+  font-weight: bold;
+  box-shadow: inset 0 -2px 0 0 #fff;
+}
+
+/* 选项卡内容容器样式 */
+.tab-content-container {
+  padding: 16px;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex-grow: 1;
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
+/* 选项卡内容样式 */
+.tab-content {
+  display: none;
+}
+
+/* 显示当前选项卡内容 */
+.tab-content.active {
+  display: block;
+}
+
+.user-login {
+  margin-left: auto;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
