--- a/src/product/cruise/index/Index.module.css
+++ b/src/product/cruise/index/Index.module.css
@@ -36,7 +36,6 @@
   background-color: #f6f7f9;
   padding: 8px;
   border-radius: 4px;
-  margin-bottom: 20px;
   overflow-x: auto;
   white-space: nowrap;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -137,6 +136,16 @@
   text-decoration: none;
   font-size: 15px;
   font-weight: 500;
+}
+
+.login {
+  font-size: 10px;
+}
+
+.loginBtn {
+  width: 80px;
+  height: 40px;
+  font-size: 15px;
 }
 
 /** 网站变灰，重大悼念活动时使用 **/
