--- a/src/product/cruise/index/Index.module.css
+++ b/src/product/cruise/index/Index.module.css
@@ -146,10 +146,12 @@
   width: 80px;
   height: 40px;
   font-size: 16px;
-  background-color: rgb(189, 189, 189);
+  background-color: #1677ff;
   border-radius: 0.3em;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.2), 0 2px 10px 0 rgba(0,0,0,.1) ;
   border: 0;
+  color: #fff;
+  font-weight: 500;
 }
 
 /* Dropdown Content (Hidden by Default) */
